Added a new entity "categories" table, will now begin testing of foreign keys

--- a/RecipeApplication/App.config
+++ b/RecipeApplication/App.config
@@ -15,5 +15,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="testDbEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=OWO\SQLEXPRESS;initial catalog=testDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="RecipeEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=OWO\SQLEXPRESS;initial catalog=testDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
